--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,7 +176,7 @@ body .full-width {
 }
 
 .menu-spacing {
-    height: 6.5rem;
+    height: 65px;
 }
 
 .intro-content {
@@ -360,7 +360,7 @@ body .full-width {
     border: 0.1rem solid var(--primary-color);
 }
 
-@media (max-width: 360px) {
+@media (max-width: 800px) {
     .intro-content, .grid {
         grid-template-columns: 1fr;
     }
@@ -425,4 +425,28 @@ body .full-width {
     .menu-spacing {
         display: none;
     }
+    
+    h1 {
+        font-size: 4rem;
+      }
+    
+      h2 {
+        font-size: 3.6rem;
+      }
+    
+      h3 {
+        font-size: 3.4rem;
+      }
+    
+      h4 {
+        font-size: 3.2rem;
+      }
+    
+      h5 {
+        font-size: 3rem;
+      }
+    
+      h6 {
+        font-size: 2.8rem;
+      }
 }
